--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ __pycache__
 .ipynb_checkpoints
 .vscode
 data
+env
 
 *.npz
 *.h5
@@ -10,6 +11,3 @@ data
 *.zip
 *.tar
 *.rar
-
-C8/4.3_Plotly_Basics.ipynb
-OPENAI_API_KEY.txt
